[package]
name = "test_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.97"
toml = "0.5"
indexmap = { version = "1.0", optional = true }
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]

[features]
default = []
